# paran_test_api

./: .env.sample  .gitignore  README.md  TASK.md  alembic.ini  compose.yaml  docker-compose.override.yml  pyproject.toml  requirements-dev.txt  requirements-test-auth.txt  requirements-test-pdf.txt  requirements.txt
auth_service/: Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
auth_service/config/: __init__.py  dependencies.py  logging_config.py  settings.py
auth_service/crud/: __init__.py  profile.py  user.py
auth_service/database/: __init__.py  engine.py
auth_service/exceptions/: __init__.py  security.py
auth_service/routers/: __init__.py  api.py  profile.py  user.py
auth_service/schemas/: __init__.py  user.py
auth_service/security/: __init__.py  token_manager.py  utils.py
auth_service/tests/: test_api.py
auth_service/validators/: __init__.py  password.py
pdf_service/: .dockerignore  Dockerfile  init-aws.sh  pdf_main.py  pyproject.toml  requirements.txt  worker.py
pdf_service/config/: __init__.py  dependencies.py  logging_config.py  settings.py
pdf_service/crud/: __init__.py  profile.py
pdf_service/router/: __init__.py  pdf_router.py
pdf_service/schemas/: __init__.py  profile.py
pdf_service/security/: exceptions.py  interfaces.py  token_manager.py  utils.py
pdf_service/services/: __init__.py  pdf_service.py
pdf_service/storage/: interfaces.py  s3.py  sqs.py
src/: main.py  pdf_main.py
src/config/: __init__.py  dependencies.py  dependency.py  settings.py
src/crud/: __init__.py  profile.py  user.py
src/database/: __init__.py  dev_engine.py  engine.py
src/exceptions/: __init__.py  security.py  user.py
src/routers/: __init__.py  api.py  profile.py  user.py
src/schemas/: user.py  (+1 more)
(+20 files in other folders)
