[project]
name = "param-test-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.129.0",
    "pydantic-settings>=2.13.0",
    "sqlalchemy>=2.0.46",
    "uv>=0.10.4",
    "uvicorn>=0.41.0",
]
