[project]
name = "param-test-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.15.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.0.0",
    "fpdf2>=2.8.6",
]
